add group by posts listing
