# internal/schema/post.go
@@ -8,3 +8,9 @@ type PostResponse struct {
 	MarkId        *uint `json:"mark_id"`
 	IsAlreadyRead bool  `json:"is_already_read"`
 }
+
+type PostResponseByGroup struct {
+	Bestsellers []PostResponse `json:"bestsellers"`
+	Partners    []PostResponse `json:"partners"`
+	Other       []PostResponse `json:"other"`
+}
